--- a/html-css/media-queries/MQ001/estilos/tela.css
+++ b/html-css/media-queries/MQ001/estilos/tela.css
@@ -1,1 +1,26 @@
 @charset "UTF-8";
+
+body{
+    background-color: antiquewhite;
+}
+
+header{
+    background-color: brown;
+    padding: 10px;
+    margin: -8px -8px 0 -8px;
+}
+
+header > h1{
+    text-align: center;
+    color: aliceblue;
+}
+
+nav{
+    color: aliceblue;
+}
+
+li{
+    list-style: none;
+    display: inline;
+    padding-left: 5px;
+}
