--- a/html-css/tela-de-login/style.css
+++ b/html-css/tela-de-login/style.css
@@ -2,8 +2,6 @@
 
 /*Configuração geral*/
 body{
-    height: 100vh;
-    width: 100vw; 
     font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
 }
@@ -15,7 +13,7 @@ main{
 }
 
 section{
-    background-color: aliceblue;
+    background-color: white;
     width: 300px;
     height: 600px;
     
@@ -35,7 +33,6 @@ section{
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 500px;
 }
 
 h1{
@@ -43,7 +40,28 @@ h1{
 }
 
 #bloco1{
-    margin-top: -15px;
+    margin-top: -20px;
+    background-color: rgb(71, 0, 71);
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+#bloco2{
+    background-color: rgb(71, 0, 71);
+    border-radius: 5px;
+}
+
+svg{
+    width: 40px;
+    height: 30px;
+    transform: translate(2px, 6px);
+}
+
+form > div > input[type=text]{
+    padding: 5px;
+    transform: translate(-3px, -4px);
+    height: 25px;
+    border-radius: 5px;
 }
 
 form > input[type=submit]{
@@ -51,13 +69,23 @@ form > input[type=submit]{
     width: 100%;
     margin-top: 13px;
     font-size: 18px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(160, 90, 224);
+    padding: 5px 0px;
+    color: white;
 }
 
 form > input[type=button]{
     display: block;
     width: 100%;
     font-size: 18px;
-    margin-top: -5px;
+    margin-top: -8px;
+    border-radius: 5px;
+    border: 3px solid rgb(160, 90, 224);
+    background-color: white;
+    padding: 3px 0px;
+    color: rgb(61, 61, 61);
 }
 
 
@@ -71,7 +99,7 @@ form > input[type=button]{
 
     section{
         width: 300px;
-        height: 600px;
+        height: 650px;
     }
     
     #imagem{
@@ -80,6 +108,11 @@ form > input[type=button]{
 
     #login{
         padding: 0px 40px;
+        margin-top: -10px;
+    }
+
+    h1{
+        font-size: 30px;
     }
 }
 
@@ -92,20 +125,28 @@ form > input[type=button]{
     
     section{
         width: 600px;
-        height: 300px;
+        height: 330px;
     }
     
     #imagem{
-        height: 300px;
         width: 250px;
+        height: 100%;
     
         float: left;
     }
     
     #login{
         float: right;
-        margin-right: 90px;
-        margin-top: 50px;
+        margin-right: 65px;
+        margin-top: 10px;
+    }
+
+    h1{
+        font-size: 2.5em;
+    }
+
+    #bloco2{
+        margin-bottom: 20px;
     }
     }
 
@@ -122,7 +163,7 @@ form > input[type=button]{
     }
     
     #imagem{
-        height: 400px;
+        height: 100%;
         width: 350px;
     
         float: right;
@@ -130,12 +171,15 @@ form > input[type=button]{
     
     #login{
         float: left;
-        margin-left: 130px;
+        margin-left: 120px;
         margin-top: 40px;
     }
     
     h1{
         font-size: 2.5em;
     }
-    
+
+    #bloco2{
+        margin-bottom: 20px;
+    }
     }
