--- a/html-css/tela-de-login/style.css
+++ b/html-css/tela-de-login/style.css
@@ -57,13 +57,6 @@ svg{
     transform: translate(2px, 6px);
 }
 
-form > div > input[type=text]{
-    padding: 5px;
-    transform: translate(-3px, -4px);
-    height: 25px;
-    border-radius: 5px;
-}
-
 form > input[type=submit]{
     display: block;
     width: 100%;
@@ -91,7 +84,7 @@ form > input[type=button]{
 
 
 
-/*celular e tablet*/
+/*celular e tablet menores*/
 @media screen and (min-width: 300px) and (max-width: 768px){
     body{
         background-color: blueviolet;
@@ -114,9 +107,17 @@ form > input[type=button]{
     h1{
         font-size: 30px;
     }
+    
+    form > div > input[type=text]{
+        padding: 5px;
+        width: calc(100%, -38px);
+        transform: translate(-3px, -4px);
+        height: 25px;
+        border-radius: 5px;
+    }    
 }
 
-/*tablet e tela menores*/
+/*tablet maiores e tela menores*/
 @media screen and (min-width: 768px) and (max-width: 992px){
 
     body{
@@ -148,7 +149,14 @@ form > input[type=button]{
     #bloco2{
         margin-bottom: 20px;
     }
+
+    form > div > input[type=text]{
+        padding: 5px;
+        transform: translate(-3px, -4px);
+        height: 25px;
+        border-radius: 5px;
     }
+}
 
 /*telas maiores*/
 @media screen and (min-width: 992px){
@@ -182,4 +190,11 @@ form > input[type=button]{
     #bloco2{
         margin-bottom: 20px;
     }
+    
+    form > div > input[type=text]{
+        padding: 5px;
+        transform: translate(-3px, -4px);
+        height: 25px;
+        border-radius: 5px;
     }
+}
