--- a/html-css/flexbox/exercícios/estilo01ex01.css
+++ b/html-css/flexbox/exercícios/estilo01ex01.css
@@ -1,23 +1,29 @@
 @charset "UTF-8";
-    
+
+@media screen and (min-width: 560px){
+
 *{
-    transition: width 0.5s, heigth 0.5s;
+    font-family: cursive;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 header{
     background-color: grey;
     margin: -10px -8px;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 25px 10px;
     width: 100%;
     height: 130px;
 
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between; /*Coloca os dois containers alinhado lado a lado*/
+    row-gap: 15px;
 }
 
 #TituloHeader{
-    font-family: cursive;
     font-size: 16px;
     color: white;
     text-shadow: 1px 1px 1px black;
@@ -28,7 +34,6 @@ header{
 }
 
 #ContainerMenu{
-    font-family: cursive;
     color: white;
     font-size: 16px;
     font-weight: 500;
@@ -41,14 +46,18 @@ header{
     align-content: center;
 }
 
-header > #ContainerMenu > div{
-    background-color: #707070;
-    border: 2px solid black;
+#ContainerMenu > div{
+    background-color: #414040;
+    border: 2px solid rgba(0, 0, 0, 0.466);
     width: 62px;
     height: 25px;
     border-radius: 5px;
     padding: 2px 5px;
     margin-left: 5px;
+}
+
+#ContainerMenu > div:hover{
+    background-color: black;
 }
 
 main{
@@ -64,43 +73,13 @@ main{
 }
 
 main > h1{
-    font-family: cursive;
     text-align: center;
     color: aliceblue;
     text-shadow: 1px 1px 1px black;
 }
 
 main > p{
-    font-family: cursive;
     text-align: justify;
     color: aliceblue;
 }
-
-
-
-@media screen and (min-width: 300px) and (max-width: 560px){
-    
-header{
-    height: 50vh;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#TituloHeader{
-    font-size: 1em;
-}
-
-#ContainerMenu{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-}
-
-header > #ContainerMenu > div{
-    margin-bottom: 5px;
-}
-
 }
