--- a/html-css/flexbox/exercícios/estilo01ex01.css
+++ b/html-css/flexbox/exercícios/estilo01ex01.css
@@ -8,6 +8,7 @@
 
 body{
     overflow-x: hidden;
+    width: 100vw;
 }
 
 header{
@@ -20,7 +21,7 @@ header{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between; /*Coloca os dois containers alinhado lado a lado*/
-    row-gap: 15px;
+    gap: 15px; /*Espaçamento entre os itens flex*/
 }
 
 #TituloHeader{
@@ -31,13 +32,14 @@ header{
 
     justify-content: flex-start;
     align-content: center;
+    flex: 1 0 170px;
 }
 
 #ContainerMenu{
     color: white;
     font-size: 16px;
     font-weight: 500;
-    padding-right: 20px;
+    padding-right: 25px;
     padding-left: 20px;
 
     display: flex;
